# fastapi-design-api-example

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: .secrets.toml  alembic.ini  config.py  conftest.py  main.py  prospector.yaml  pytest.ini  settings.toml
app/ext/: base_class.py  broker.py  code_erros.py  fetcher.py
app/ext/db/: database.py  utils.py
app/ext/logging/: factory_logging.py
app/ext/orm/: orm_base.py
app/migrations/: env.py
app/migrations/versions/: 2021-05-28_08:47:03_6faa7a2f8325_create_order_table.py  2021-05-31_11:58:57_cd71e13771b4_fix_table_name_errors.py  2021-05-31_12:00:21_081b3ac0d231_fix_table_name_errors.py  2021-07-03_22:50:42_18f7118a4b42_initial_table_order.py
app/order/: __init__.py  settings.local.toml
app/order/adapters/: __init__.py  models_order.py  orm.py  orm_base.py
app/order/adapters/orm_adapter/: __init__.py  orm.py
app/order/api/: endpoints.py
app/order/api/adapters/: product.py  publisher.py  user.py
app/order/dao/: __init__.py  dao_order.py
app/order/domains/: model.py  order.py
app/order/entrypoints/: endpoints.py
app/order/locust/: locust_order_endpoints.py
app/order/models/: models_order.py
app/order/service/: business_rules.py
app/order/tests/: test_unit_order_endpoints.py  test_unit_order_service.py
