[tool.poetry]
name = "API COFFEE"
version = "0.1.0"
description = "Design API Example"
authors = ["Jonatas <contact@jonatasoliveira.dev>"]

[tool.poetry.dependencies]
python = "~3.9"
uvicorn = "^0.13.4"
fastapi = "*"
asyncpg = "*"
loguru = "*"
dynaconf = "*"
pydantic = "^1.*"
gunicorn = "^20.*"
psycopg2-binary = "^2.*"
alembic = "^1.*"
sqlalchemy = "*"
requests = "*"
pep8 = "*"
locust = "^1.4.3"
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]
jedi = "*"
ipdb = "*"
neovim = "*"
pep8 = "*"
flake8 = "*"
pylint = "*"
mypy = "*"
isort = "*"
autoflake = "*"
sqlalchemy-stubs = "*"
pytest = "*"
pytest-cov = "*"
pytest-watch = "*"
pytest-sugar = "*"
pytest-mock = "*"
prospector = {version = "^1.3.1", extras = ["with_with_pyroma", "with_vulture", "with_frosted", "with_mypy", "with_bandit"]}
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
colorama = "0.3.9"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 160

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
